[project]
name = "gpt-sovits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctranslate2==4.4.0",
    "fast-langdetect>=0.2.0",
    "fastapi[standard]>=0.135.3",
    "faster-whisper==1.0.3",
    "ffmpeg-python>=0.2.0",
    "funasr==1.0.27",
    "gradio==3.50.2",
    "jieba>=0.42.1",
    "librosa==0.10.2",
    "modelscope>=1.35.4",
    "numba==0.58.1",
    "numpy==1.23.5",
    "onnxruntime==1.17.3",
    "opencc>=1.2.0",
    "psutil>=7.2.2",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0.3",
    "scipy==1.10.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch==2.2.2+cu121",
    "torchaudio==2.2.2+cu121",
    "torchvision==0.17.2+cu121",
    "tqdm>=4.66.5",
    "transformers==4.45.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
